# HRMNet

./: README.md
HRMNet-code/: .gitignore  LICENSE  README.md  distributed.py  inference.ipynb  inference_cam.ipynb  load_config.py  pyproject.toml  requirements.txt  test.py
HRMNet-code/config/default/: COD.yaml  ISOD.yaml  config.yaml
HRMNet-code/loader/: albu_transforms.py
HRMNet-code/loader/image/: AlbuDataset.py  CamoObjDataset.py  ISalObjDataset.py
HRMNet-code/loader/video/: VSalObjDataset.py
HRMNet-code/networks/: ASPPFormer.py  ConvNeXt.py  EAFormer.py  EdgeAwareToolBox.py  MFusionToolBox.py  PGSFormer.py  SwinNets.py  VGSformer.py  Wavenet.py  _deeplab.py  models_config.py  segswin.py
HRMNet-code/networks/backbone/: build_hiera.py  convnextv2.py  efficientnet.py  pvt_v2_eff.py  segswin.py
HRMNet-code/networks/backbone/hiera/: hieradet.py
HRMNet-code/networks/backbone/intern/: build_intern.py
HRMNet-code/networks/backbone/vmamba/: build_mamba.py
HRMNet-code/networks/layers/: loss.py  position.py  transformer.py
HRMNet-code/scripts/: cleanup_ckpts.py  gird_serach.sh  run_dist.sh  task_run_dist.sh
HRMNet-code/utils/: ema.py  loss.py  loss_presets.py  metric.py  model_utils.py  optim_presets.py  proj_utils.py  recoder.py
